<resources>
    <string name="app_name">Craveyard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="crave_yard">Craveyard</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="trending_now">Trending now</string>
    <string name="find_best_recipes_for_cooking">Find best recipes for cooking</string>
    <string name="favorite_recipes">Favorite recipes</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="empty_favorite_list">No favorites yet, start adding some.</string>
    <string name="empty_result">No results found.</string>
    <string name="user_image">User Image</string>
    <string name="username">Username</string>
    <string name="read_more">Read more...</string>
    <string name="show_less">Show less</string>
    <string name="password">Password</string>
    <string name="e_mail_address">Email Address</string>
    <string name="welcome_back">Welcome back, we missed you!</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="register_to_start_exploring_delicious_recipes">Register to start exploring delicious recipes!</string>
    <string name="category_name">Category Name</string>
    <string name="no_internet">No internet connection, please try again later.</string>
    <string name="categories">Categories</string>
    <string name="about_app">
        Craveyard is your ultimate mobile recipe app for discovering a diverse selection of dishes from various cuisines.
        \n\nCrafted by the developers mentioned above, finding inspiration for your next meal is just a tap away!
    </string>
</resources>