<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.craveyard.ui.auth.register.viewmodel.RegisterViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        tools:context=".ui.auth.register.RegisterFragment">

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="40dp"
            android:paddingBottom="120dp"
            android:text="@string/register"
            android:textColor="@color/light_red"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_fisrtname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyCustomStyle"
            android:hint="@string/username"
            app:error="@{vm.userNameError}"
            app:layout_constraintTop_toBottomOf="@id/register_tv">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.userNameLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyCustomStyle"
            android:layout_marginTop="8dp"
            android:hint="@string/e_mail_address"
            app:error="@{vm.emailError}"
            app:layout_constraintTop_toBottomOf="@id/text_input_fisrtname">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.emailLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyCustomStyle"
            app:error="@{vm.passwordError}"
            app:layout_constraintTop_toBottomOf="@id/text_input_email">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.passwordLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_confirmation"
            app:error="@{vm.passwordConfirmationError}"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:boxBackgroundMode="outline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyCustomStyle"
            app:layout_constraintTop_toBottomOf="@id/text_input_password">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.passwordConfirmationLiveData}"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="10dp"
            android:onClick="@{()->vm.register()}"
            app:cardBackgroundColor="@{vm.isRegisteringLiveData==true ? @color/white : @color/light_red}"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_input_password_confirmation">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/register"
                android:textColor="@{vm.isRegisteringLiveData == true ? @color/black : @color/white}"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/register_btn_progress"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end|center_vertical"
                android:indeterminate="true"
                android:visibility="@{vm.isRegisteringLiveData == false ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>