<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.craveyard.ui.auth.login.viewmodel.LoginViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="70dp"
            android:paddingBottom="90dp"
            android:text="@string/login"
            android:textColor="@color/light_red"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/e_mail_address"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/light_red"
            app:endIconTint="@color/light_red"
            app:error="@{vm.emailError}"
            app:hintTextColor="@color/light_red"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            app:startIconTint="@color/light_red"
            tools:layout_editor_absoluteX="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.emailLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.MyCustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/light_red"
            app:endIconTint="@color/light_red"
            app:error="@{vm.passwordError}"
            app:hintTextColor="@color/light_red"
            app:layout_constraintTop_toBottomOf="@id/text_input_email"
            app:passwordToggleEnabled="true"
            app:startIconTint="@color/light_red"
            tools:layout_editor_absoluteX="16dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={vm.passwordLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--        <TextView-->
        <!--            android:id="@+id/forgot_password_tv"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/forgot_password"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            app:layout_constraintTop_toBottomOf="@id/text_input_password" />-->


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:onClick="@{()->vm.login()}"
            app:cardBackgroundColor="@{vm.isLogin()==true ? @color/white : @color/light_red}"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/text_input_password"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/login"
                android:textColor="@{vm.isLogin() == true ? @color/black : @color/white}"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/register_btn_progress"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end|center_vertical"
                android:indeterminate="true"
                android:visibility="@{vm.isLogin() == false ? View.GONE : View.VISIBLE}"
                app:indicatorColor="@color/light_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{()->vm.gotoRegisterClick()}"
            app:cardBackgroundColor="@color/light_red"
            app:cardCornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_arrow_forward"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />


        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
